<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/ic_action_content_add"
        app:showAsAction="ifRoom"
        android:title="@string/new_task" />
</menu>