<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_finish_task"
        android:icon="@drawable/ic_action_navigation_check"
        app:showAsAction="ifRoom"
        android:title="@string/finish" />
</menu>